--- a/src/component/menu-item/menu-item.styles.scss
+++ b/src/component/menu-item/menu-item.styles.scss
@@ -5,14 +5,48 @@
     flex:1 1 auto;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid #000000;
     margin: 0 7.5px 15px;
-  
+    background-position: center;
+    background-size:cover;
+    
+    &.large{
+      height: 380px;
+    }
     &:first-child{
       margin-right:7.5px;
     }
     &:last-child{
     margin-left:7.5px;
     }
-  
+  .background-image{
+    width:100%,
+    
+
   }
+
+
+  }
+
+  .content {
+    height: 90px;
+    padding: 0 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: #ffffff;
+    opacity: 0.7;
+    .title{
+      font-weight: bold;
+      margin-bottom: 6px;
+      font-size: 22px;
+      color: #4a4a4a;
+    }
+    .subtitle {
+      font-weight: lighter;
+      font-size: 16px;
+    }
+  }
+  
